--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	                </li> 
 					</ul>
 			<div align="center">
-			<hr><a href="http://liu0223.dpdns.org">liu的主站</a>版权所有
+			<hr><a href="http://liu0223.dpdns.org">liu的主站</a>联系我a@liu0223.dpdns.org
 			</div>
 			</div>
 	    </div>
