--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
 		$_num.html(num);
 		if(num===0){
 			//跳转地址写在这里
-			window.location.href="../";
+			window.location.href="http://www.liu0223.dpdns.html";
 		}
 	},1000);
 	//返回按钮单击事件
