--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<link rel="icon" type="image/png" href="images/logo.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>小太阳小游戏平台</title>
-	<meta name="keywords" content="小太阳小游戏平台" />
-	<meta name="description" content="小太阳小游戏平台，一套多个小游戏网站合集，采用响应式布局设计，自适应手机移动端，用户体验更好。" /> 
+	<title>js小游戏平台</title>
+	<meta name="keywords" content="js小游戏平台" />
+	<meta name="description" content="js游戏平台" /> 
 	<meta name="author" content="" />
 	<meta name="copyright" content="" />
 
@@ -37,7 +37,7 @@
 		    -->
 
 			<div class="logo">
-			<a href="https://www.zfcode.cn" target="right" class="simple-text"><img src="images/logo.png " width="30" height="30"/> 小太阳小游戏平台</a>
+			<a href="https://site.liu0223.dpdns.org" target="right" class="simple-text"><img src="images/logo.png " width="30" height="30"/> 小太阳小游戏平台</a>
 			</div>
 
 	    	<div class="sidebar-wrapper">
@@ -92,7 +92,7 @@
 	                </li> 
 					</ul>
 			<div align="center">
-			<hr><a href="http://liu0223.dpdns.org">liu的主站</a>联系我：a@liu0223.dpdns.org
+			<hr><a href="http://site.liu0223.dpdns.org">liu的主站</a>联系我：a@liu0223.dpdns.org
 			</div>
 			</div>
 	    </div>
