--- a/link/index.html
+++ b/link/index.html
@@ -44,7 +44,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 			
 			</div>
 <div class="profile-card-ctr">
-			<a href="http://site.liu0223.dpdns.org"><button class="profile-card__button button--orange">liu的主站</button></a>
+			<a href="http://www.liumail.dpdns.org"><button class="profile-card__button button--orange">liu的免费邮箱</button></a>
 			</div>
 		</div>
 	
