--- a/link/index.html
+++ b/link/index.html
@@ -23,7 +23,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 	
 		<div class="profile-card__cnt js-profile-cnt">
 			<div class="profile-card__name">liu的主js游戏站</div>
-			<div class="profile-card__txt">www.liu0223.dpdns.org</div>
+			<div class="profile-card__txt">www.lsc.xx.kg；www.liu0223.dpdns.org</div>
 			<div class="profile-card-loc">
 				<span class="profile-card-loc__icon">
 					<svg class="icon"><use xlink:href="#icon-location"></use></svg>
