--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<link rel="icon" type="image/png" href="images/logo.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>js小游戏平台</title>
-	<meta name="keywords" content="js小游戏平台" />
-	<meta name="description" content="js游戏平台" /> 
+	<title>摸鱼网页小游戏平台</title>
+	<meta name="keywords" content="摸鱼小游戏平台" />
+	<meta name="description" content="摸鱼游戏平台" /> 
 	<meta name="author" content="" />
 	<meta name="copyright" content="" />
 
@@ -37,7 +37,7 @@
 		    -->
 
 			<div class="logo">
-			<a href="https://site.liu0223.dpdns.org" target="right" class="simple-text"><img src="images/logo.png " width="30" height="30"/> 小太阳小游戏平台</a>
+			<a href="https://site.liu0223.dpdns.org" target="right" class="simple-text"><img src="images/logo.png " width="30" height="30"/> 摸鱼网页小游戏平台</a>
 			</div>
 
 	    	<div class="sidebar-wrapper">
