--- a/link/index.html
+++ b/link/index.html
@@ -22,13 +22,13 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 		</div>
 	
 		<div class="profile-card__cnt js-profile-cnt">
-			<div class="profile-card__name">liu的主js游戏站</div>
+			<div class="profile-card__name">摸鱼网页小游戏平台</div>
 			<div class="profile-card__txt">www.906331.xyz</div>
 			<div class="profile-card-loc">
 				<span class="profile-card-loc__icon">
 					<svg class="icon"><use xlink:href="#icon-location"></use></svg>
 				</span>
-				<span class="profile-card-loc__txt">小太阳小游戏平台</span>
+				<span class="profile-card-loc__txt">摸鱼网页小游戏平台</span>
 			</div>
 		
 			<div class="profile-card-inf">
