--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	                </li> 
 					</ul>
 			<div align="center">
-			<hr><a href="http://mail.906331.xyz">liu的免费邮箱</a>联系我：a@liu0223.dpdns.org
+			<hr><a href="http://ai.906331.xyz">liu的免费ai</a>联系我：a@liu0223.dpdns.org
 			</div>
 			</div>
 	    </div>
